--- a/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
+++ b/src/app/dashboard/stroom-verbruik/stroom-verbruik.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header h3 clickable" (click)="navigateToVerbruikDetails()">
-    <i class="fas fa-bolt" aria-hidden="true"></i> Stroom
+    <fa-icon [icon]="faPlugCircleBolt"></fa-icon> Stroom
   </div>
   <div class="card-body">
     <div class="ledbar float-start">
@@ -10,11 +10,11 @@
     <p class="h3">Op dit moment</p>
     <div class="h3 current-power-usage">
       {{opgenomenVermogen ? opgenomenVermogen.watt : '-'}} Watt
-      <span ngbTooltip="Daltarief">
-        <i *ngIf="opgenomenVermogen?.tariefIndicator === 'DAL'" class="fas fa-moon" aria-hidden="true"></i>
+      <span *ngIf="opgenomenVermogen?.tariefIndicator === 'DAL'" ngbTooltip="Daltarief">
+        <fa-icon [icon]="faMoon"></fa-icon>
       </span>
-      <span ngbTooltip="Normaaltarief">
-        <i *ngIf="opgenomenVermogen?.tariefIndicator === 'NORMAAL'" class="fas fa-sun" aria-hidden="true"></i>
+      <span *ngIf="opgenomenVermogen?.tariefIndicator === 'NORMAAL'" ngbTooltip="Normaaltarief">
+        <fa-icon [icon]="faSun"></fa-icon>
       </span>
     </div>
 
@@ -24,11 +24,11 @@
 
     <p class="h6" *ngIf="meterstand">
       <span ngbTooltip="Daltarief">
-        <i class="fas fa-moon" aria-hidden="true"></i><span class="mostrecent-meterreading-tariff1">{{meterstand.stroomTarief1 | number: '1.3-3'}}</span>
+        <fa-icon [icon]="faMoon"></fa-icon> <span class="mostrecent-meterreading-tariff1 ms-1">{{meterstand.stroomTarief1 | number: '1.3-3'}}</span>
       </span>
       |
       <span ngbTooltip="Normaaltarief">
-        <i class="fas fa-sun" aria-hidden="true"></i><span class="mostrecent-meterreading-tariff2">{{meterstand.stroomTarief2 | number: '1.3-3'}}</span>
+        <fa-icon [icon]="faSun"></fa-icon> <span class="mostrecent-meterreading-tariff2 ms-1">{{meterstand.stroomTarief2 | number: '1.3-3'}}</span>
       </span>
     </p>
     <p class="h6" *ngIf="!meterstand">
