--- a/src/app/error-handling/error-handling.component.html
+++ b/src/app/error-handling/error-handling.component.html
@@ -1,6 +1,6 @@
 <ng-template #errorDialogTemplate let-close="close">
   <div class="modal-header bg-danger text-light">
-    <h4 class="modal-title"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Er is een fout opgetreden</h4>
+    <h4 class="modal-title"><fa-icon [icon]="faCircleExclamation"></fa-icon> Er is een fout opgetreden</h4>
   </div>
   <div class="modal-body">
     <p>{{message}}</p>
